# movies-rater-django

./: README.md  db.sqlite3  manage.py  pyproject.toml
movies/: models.py  serializer.py  urls.py  views.py
movies/migrations/: 0001_initial.py
movies_rater_project/: asgi.py  settings.py  urls.py  wsgi.py
